Fix border collapse for tables

--- a/destyle.css
+++ b/destyle.css
@@ -1,4 +1,4 @@
-/*! destyle.css v3.0.0 | MIT License | https://github.com/nicolas-cusan/destyle.css */
+/*! destyle.css v3.0.1 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
 /* Reset box-model and set borders */
 /* ============================================ */
@@ -402,6 +402,7 @@ summary {
 
 table {
   border-color: inherit; /* 1 */
+  bordr-collapse: collapse;
 }
 
 caption {
